Migrate implementation to use virtual threads